welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type Booleen
var fini:Booleen = false
         ^