welcome.lessons.welcome.bdr.BDR.scala.code
var fini:Booleen = false
while (!fini) {
  avance()
} 